# divide_and_conquer

./: .clang-format  CMakeLists.txt  main.cpp  merge_sort.cpp  merge_sort.hpp  product.cpp  product.hpp  tests.cpp
src/: merge_sort.hpp  product.cpp  product.hpp
test/: merge_sort.cpp  product.cpp
